# ProfAll

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  DEBUG  DEVELOPER_GUIDE.md  README.md  USER_GUIDE.md  docker-compose.yml  nohup.out  profall.ipynb  profall.pth  profall.py  pyproject.toml  session_prompt.md  setup.py  site_info.py  test.pth  test.py
.github/workflows/: ci.yml
ProfAll.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scratch/: profall.ipynb  site_info.py  test.pth  test.py
src/profall/: cli.py  core.py  hook.py
tests/: test_cli.py  test_core.py  test_coverage.py  test_hook.py
